# auction-service

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py  tasks.py
src/database/: settings.py
src/database/migrations/: env.py
src/database/migrations/versions/: 9b9a25008bf0_create_tables.py
src/database/models/: __init__.py  bid.py  lot.py
src/routers/: bids.py  lots.py
src/schemas/: bids.py  lots.py
src/websockets/: manager.py  ws_lots.py
