[project]
name = "udatatesttask"
version = "0.1.0"
description = "[]"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "[]"}
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
alembic = ">=1.16.5,<2.0.0"
annotated-types = ">=0.7.0,<0.8.0"
anyio = ">=4.11.0,<5.0.0"
apscheduler = ">=3.11.0,<4.0.0"
click = ">=8.3.0,<9.0.0"
colorama = ">=0.4.6,<0.5.0"
dotenv = ">=0.9.9,<0.10.0"
fastapi = ">=0.117.1,<0.118.0"
greenlet = ">=3.2.4,<4.0.0"
h11 = ">=0.16.0,<0.17.0"
idna = ">=3.10,<4.0"
python-dotenv = ">=1.1.1,<2.0.0"
sniffio = ">=1.3.1,<2.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
starlette = ">=0.48.0,<0.49.0"
typing-extensions = ">=4.15.0,<5.0.0"
typing-inspection = ">=0.4.1,<0.5.0"
tzdata = ">=2025.2,<2026.0"
tzlocal = ">=5.3.1,<6.0.0"
uvicorn = ">=0.37.0,<0.38.0"
wsproto = "==1.2"
asyncpg = ">=0.30.0,<0.31.0"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
